Fix rectangular grid spacing limits incorrect after resizing canvas

Fix grid spacing being limited to half load-time image size.
Removed setGridDivision which was only used to set the spacing spinbox max on image load.
Changed spacing spinbox max to int max.

Patch by Carl Olsson, thanks!

BUG: 408166